fix carousel prev button not showing and height issue with the carousel slides

--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -49,6 +49,10 @@
   &--custom {
     position: relative;
   }
+  &--adaptive {
+    height: 100%;
+    margin-bottom: -40px;
+  }
   &__title--smaller h1 {
     font-size: 48px;
     padding: 10px;
